--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         </section>
 
         <section>
-          <h2>Hello There</h2>
-          <p>This is our project</p>
+          <h2>A Grocery Store Database Design</h2>ß
         </section>
 
         <!-- Example of nested vertical slides -->
